Updated to better CLI